--- a/03-integrations/IDP-examples/EntraID/requirements.txt
+++ b/03-integrations/IDP-examples/EntraID/requirements.txt
@@ -1,9 +1,12 @@
-strands-agents
-strands-agents-tools
-uv
 boto3
 bedrock-agentcore
 bedrock-agentcore-starter-toolkit
+strands-agents
+strands-agents-tools
 tavily-python
+uv
+jwt
+msal # Microsoft Authentication Library
 uvicorn
 fastapi
+requests
